# particle-gnn

./: GNN_LLM.py  GNN_LLM_INR_parallel.py  GNN_LLM_parallel.py  GNN_Main.py  GNN_Test.py  README.md  data_generator_particle_pairforce.py  environment.yaml  ongoing_refactor.md  pyproject.toml  test_clustering.py  train_INR_subprocess.py  train_cell_subprocess.py  tune_clustering.py
LLM/: instruction_dicty.md  instruction_dicty_INR.md
config/: test_reference.json
config/arbitrary/: arbitrary.yaml  arbitrary_bison.yaml
config/boids/: boids.yaml
config/gravity/: gravity.yaml
config/misc/: dicty.yaml  dicty_INR_Claude_00.yaml  dicty_INR_Claude_01.yaml  dicty_INR_Claude_02.yaml  dicty_INR_Claude_03.yaml  dicty_spring_force.yaml  dicty_spring_force_noise.yaml
src/cell_gnn/: cell_state.py  config.py  figure_style.py  fitting_models.py  git_code_tracker.py  graph_utils.py  integrators.py  plot.py  plot_inr.py  sparsify.py  utils.py  zarr_io.py
src/cell_gnn/generators/: __init__.py  arbitrary_ode.py  boids_ode.py  dicty_spring_force_ode.py  embryo_loader.py  graph_data_generator.py  gravity_ode.py  utils.py
src/cell_gnn/models/: Siren_Network.py  __init__.py  cell_field_gnn.py  cell_gnn.py  exploration_tree.py  graph_trainer.py  inr_trainer.py  plot_exploration_tree.py  registry.py  utils.py
src/particle_gnn/: config.py  figure_style.py  particle_state.py  plot.py  utils.py  zarr_io.py
src/particle_gnn/generators/: PDE_A.py  PDE_B.py  PDE_G.py  __init__.py  arbitrary_ode.py  boids_ode.py  graph_data_generator.py  gravity_ode.py  utils.py
(+8 files in other folders)
